--- a/activityCommit.ipynb
+++ b/activityCommit.ipynb
@@ -1583,33 +1583,17 @@
    "metadata": {},
    "source": [
     "___\n",
-    "### Asliddin Tuxtasinov\n",
-    "___"
+    "\n",
+    "## great job\n",
+    "#### Asliddin Tuxtasinov"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": [
-    "___\n",
-    "\n",
-    "# GitHub commits activity analysis\n",
-    "Asliddin Tuxtasinov\n",
-    "___\n",
-    "\n",
-    "Bu projrcetning maqsadi: \n",
-    "- vaqt o'tishi bilan vaqt va vaqt oralig'idagi commitla sonini analiysis qilish.\n",
-    "\n",
-    "Ishlash tartibi:\n",
-    "- `get_owner_and_repoName` shu funksiya orqali github profile egasi va repository nomini ajratib olamiz.\n",
-    "- `get_github_commits_api_url` va bu fuksiya orqali esa github api url ni olamiz.\n",
-    "    - bu oddiy `https://api.github.com/repos/{owner}/{repo}/commits` shu apini qaytaradi.\n",
-    "- `get_commiter_and_message` bu funksiya orqali comitter haqida ma'lumot va commit messagedan tashkil topgan `json` data qaytaradi.\n",
-    "\n",
-    "Project yakunida esa bizdagi datalarga asoslanib ikkita grafik qaytaradi:\n",
-    "- birinchisi vaqt va vaqt oralig'idagi commitlar soni orasidagi munosabat tasvirlovchi `chiziqli grafik`\n",
-    "- ikkinchisi vaqt va vaqt oralig'idagi commitlar soni orasidagi munosabat tasvirlovchi `issiqlik(heatmap) grafik`"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
